--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "DANGEROUSLY_DISABLE_HOST_CHECK=true BROWSER=none HOST=0.0.0.0 react-scripts start",
     "start:proxy": "DANGEROUSLY_DISABLE_HOST_CHECK=true BROWSER=none HOST=0.0.0.0 react-scripts start",
-    "build": "react-scripts build",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
