Update render.yaml format for static site deployment

--- a/frontend-web/render.yaml
+++ b/frontend-web/render.yaml
@@ -1,8 +1,7 @@
-name: mindmix-frontend
-type: web
-env: static
-buildCommand: npm install && npm run build
-staticPublishPath: build
-envVars:
+build:
+  type: static
+  buildCommand: npm install && npm run build
+  staticPublishPath: build
+env:
   - key: REACT_APP_API_URL
     value: https://mindmix-iuzf.onrender.com
