--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,8 @@ services:
         sync: false  # Set this in Render dashboard
       - key: JWT_SECRET
         sync: false  # Set this in Render dashboard
+      - key: OPENAI_API_KEY
+        sync: false  # Set this in Render dashboard
 
   # Frontend Web Service  
   - type: web
