--- a/backend/data/knowledgeQuizzes.json
+++ b/backend/data/knowledgeQuizzes.json
@@ -1,47 +1,737 @@
 {
-  "history": [
-    "easy",
-    "medium",
-    "hard"
-  ],
-  "science": [
-    "easy",
-    "medium",
-    "hard"
-  ],
-  "geography": [
-    "easy",
-    "medium",
-    "hard"
-  ],
-  "literature": [
-    "easy",
-    "medium",
-    "hard"
-  ],
-  "math": [
-    "easy",
-    "medium",
-    "hard"
-  ],
-  "general": [
-    "easy",
-    "medium",
-    "hard"
-  ],
-  "currentAffairs": [
-    "easy",
-    "medium",
-    "hard"
-  ],
-  "polity": [
-    "easy",
-    "medium",
-    "hard"
-  ],
-  "economics": [
-    "easy",
-    "medium",
-    "hard"
-  ]
+  "history": {
+    "easy": [
+      {
+        "question": "In which year did World War II end?",
+        "options": [
+          "1943",
+          "1944",
+          "1945",
+          "1946"
+        ],
+        "answer": 2,
+        "explanation": "World War II ended in 1945 with the surrender of Japan.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "Who was the first President of the United States?",
+        "options": [
+          "Thomas Jefferson",
+          "George Washington",
+          "John Adams",
+          "Benjamin Franklin"
+        ],
+        "answer": 1,
+        "explanation": "George Washington served as the first President from 1789 to 1797.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "Which empire built the Great Wall of China?",
+        "options": [
+          "Roman Empire",
+          "Byzantine Empire",
+          "Chinese Empire",
+          "Mongol Empire"
+        ],
+        "answer": 2,
+        "explanation": "The Great Wall was built by Chinese dynasties.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "Who discovered America in 1492?",
+        "options": [
+          "Vasco da Gama",
+          "Christopher Columbus",
+          "Ferdinand Magellan",
+          "James Cook"
+        ],
+        "answer": 1,
+        "explanation": "Christopher Columbus discovered America in 1492.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "Which war lasted from 1914 to 1918?",
+        "options": [
+          "World War I",
+          "World War II",
+          "Cold War",
+          "Vietnam War"
+        ],
+        "answer": 0,
+        "explanation": "World War I lasted from 1914 to 1918.",
+        "difficulty": "easy"
+      }
+    ],
+    "medium": [
+      {
+        "question": "Which ancient wonder of the world was located in Alexandria?",
+        "options": [
+          "Colossus of Rhodes",
+          "Lighthouse of Alexandria",
+          "Hanging Gardens",
+          "Mausoleum"
+        ],
+        "answer": 1,
+        "explanation": "The Lighthouse of Alexandria was one of the Seven Wonders.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "In which year did India gain independence?",
+        "options": [
+          "1945",
+          "1947",
+          "1949",
+          "1950"
+        ],
+        "answer": 1,
+        "explanation": "India gained independence in 1947.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "Who was known as the Iron Lady?",
+        "options": [
+          "Margaret Thatcher",
+          "Indira Gandhi",
+          "Angela Merkel",
+          "Golda Meir"
+        ],
+        "answer": 0,
+        "explanation": "Margaret Thatcher was known as the Iron Lady.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "Which dynasty ruled China for nearly 400 years?",
+        "options": [
+          "Tang Dynasty",
+          "Ming Dynasty",
+          "Song Dynasty",
+          "Han Dynasty"
+        ],
+        "answer": 1,
+        "explanation": "The Ming Dynasty ruled from 1368 to 1644.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "Who assassinated Archduke Franz Ferdinand?",
+        "options": [
+          "Radovan Karad\u017ei\u0107",
+          "Gavrilo Princip",
+          "Slobodan Milo\u0161evi\u0107",
+          "Ratko Mladi\u0107"
+        ],
+        "answer": 1,
+        "explanation": "Gavrilo Princip's assassination triggered WWI.",
+        "difficulty": "medium"
+      }
+    ],
+    "hard": [
+      {
+        "question": "Which treaty ended World War I?",
+        "options": [
+          "Treaty of Paris",
+          "Treaty of Versailles",
+          "Treaty of London",
+          "Treaty of Berlin"
+        ],
+        "answer": 1,
+        "explanation": "The Treaty of Versailles ended World War I.",
+        "difficulty": "hard"
+      },
+      {
+        "question": "What was the code name for D-Day invasion?",
+        "options": [
+          "Operation Torch",
+          "Operation Barbarossa",
+          "Operation Overlord",
+          "Operation Market Garden"
+        ],
+        "answer": 2,
+        "explanation": "Operation Overlord was the D-Day invasion.",
+        "difficulty": "hard"
+      },
+      {
+        "question": "Who was the longest-serving British Prime Minister?",
+        "options": [
+          "Winston Churchill",
+          "Margaret Thatcher",
+          "Robert Walpole",
+          "Tony Blair"
+        ],
+        "answer": 2,
+        "explanation": "Robert Walpole served for 21 years.",
+        "difficulty": "hard"
+      }
+    ]
+  },
+  "science": {
+    "easy": [
+      {
+        "question": "What is the chemical symbol for water?",
+        "options": [
+          "H2O",
+          "CO2",
+          "NaCl",
+          "O2"
+        ],
+        "answer": 0,
+        "explanation": "H2O represents two hydrogen atoms and one oxygen atom.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "Which planet is known as the Red Planet?",
+        "options": [
+          "Venus",
+          "Mars",
+          "Jupiter",
+          "Saturn"
+        ],
+        "answer": 1,
+        "explanation": "Mars is called the Red Planet due to iron oxide on its surface.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "What is the largest organ in the human body?",
+        "options": [
+          "Heart",
+          "Liver",
+          "Skin",
+          "Lungs"
+        ],
+        "answer": 2,
+        "explanation": "Skin is the largest organ.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "How many bones are in the human body?",
+        "options": [
+          "196",
+          "206",
+          "216",
+          "226"
+        ],
+        "answer": 1,
+        "explanation": "Adults have 206 bones.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "What gas do plants absorb from the atmosphere?",
+        "options": [
+          "Oxygen",
+          "Carbon Dioxide",
+          "Nitrogen",
+          "Hydrogen"
+        ],
+        "answer": 1,
+        "explanation": "Plants absorb CO2 for photosynthesis.",
+        "difficulty": "easy"
+      }
+    ],
+    "medium": [
+      {
+        "question": "What is the speed of light in vacuum?",
+        "options": [
+          "300,000 m/s",
+          "150,000 m/s",
+          "450,000 m/s",
+          "Approximately 300,000,000 m/s"
+        ],
+        "answer": 3,
+        "explanation": "The speed of light is approximately 299,792,458 m/s.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "What is the hardest natural substance on Earth?",
+        "options": [
+          "Gold",
+          "Diamond",
+          "Platinum",
+          "Silver"
+        ],
+        "answer": 1,
+        "explanation": "Diamond is the hardest natural material with a rating of 10 on Mohs scale.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "What is the smallest unit of life?",
+        "options": [
+          "Cell",
+          "Atom",
+          "Molecule",
+          "Gene"
+        ],
+        "answer": 0,
+        "explanation": "The cell is the smallest unit of life.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "Which gas makes up most of Earth's atmosphere?",
+        "options": [
+          "Oxygen",
+          "Nitrogen",
+          "Carbon Dioxide",
+          "Argon"
+        ],
+        "answer": 1,
+        "explanation": "Nitrogen makes up about 78% of the atmosphere.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "What is the pH of pure water?",
+        "options": [
+          "5",
+          "6",
+          "7",
+          "8"
+        ],
+        "answer": 2,
+        "explanation": "Pure water has a pH of 7, which is neutral.",
+        "difficulty": "medium"
+      }
+    ],
+    "hard": [
+      {
+        "question": "What is the half-life of Carbon-14?",
+        "options": [
+          "5730 years",
+          "5710 years",
+          "5750 years",
+          "5770 years"
+        ],
+        "answer": 0,
+        "explanation": "Carbon-14 has a half-life of approximately 5730 years.",
+        "difficulty": "hard"
+      },
+      {
+        "question": "Which particle has no charge?",
+        "options": [
+          "Proton",
+          "Neutron",
+          "Electron",
+          "Quark"
+        ],
+        "answer": 1,
+        "explanation": "Neutrons have no electrical charge.",
+        "difficulty": "hard"
+      }
+    ]
+  },
+  "geography": {
+    "easy": [
+      {
+        "question": "What is the capital city of Australia?",
+        "options": [
+          "Sydney",
+          "Melbourne",
+          "Canberra",
+          "Brisbane"
+        ],
+        "answer": 2,
+        "explanation": "Canberra is the capital of Australia.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "Which is the largest ocean on Earth?",
+        "options": [
+          "Atlantic",
+          "Indian",
+          "Pacific",
+          "Arctic"
+        ],
+        "answer": 2,
+        "explanation": "The Pacific Ocean is the largest.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "How many continents are there?",
+        "options": [
+          "5",
+          "6",
+          "7",
+          "8"
+        ],
+        "answer": 2,
+        "explanation": "There are 7 continents.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "Which is the longest river in the world?",
+        "options": [
+          "Amazon",
+          "Nile",
+          "Yangtze",
+          "Mississippi"
+        ],
+        "answer": 1,
+        "explanation": "The Nile is the longest river at 6,650 km.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "What is the highest mountain on Earth?",
+        "options": [
+          "K2",
+          "Mount Kilimanjaro",
+          "Mount Everest",
+          "Mount McKinley"
+        ],
+        "answer": 2,
+        "explanation": "Mount Everest is 8,849 meters high.",
+        "difficulty": "easy"
+      }
+    ],
+    "medium": [
+      {
+        "question": "Which country has the most time zones?",
+        "options": [
+          "USA",
+          "Russia",
+          "China",
+          "Brazil"
+        ],
+        "answer": 1,
+        "explanation": "Russia spans 11 time zones.",
+        "difficulty": "medium",
+        "topic": "geography"
+      },
+      {
+        "question": "What is the capital of Brazil?",
+        "options": [
+          "Rio de Janeiro",
+          "S\u00e3o Paulo",
+          "Bras\u00edlia",
+          "Buenos Aires"
+        ],
+        "answer": 2,
+        "explanation": "Bras\u00edlia is the capital of Brazil.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "Which desert is the largest in the world?",
+        "options": [
+          "Gobi",
+          "Sahara",
+          "Antarctic",
+          "Kalahari"
+        ],
+        "answer": 2,
+        "explanation": "Antarctic is the largest desert.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "What is the smallest country in the world?",
+        "options": [
+          "Monaco",
+          "Vatican City",
+          "San Marino",
+          "Liechtenstein"
+        ],
+        "answer": 1,
+        "explanation": "Vatican City is the smallest country.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "Which country has the most islands?",
+        "options": [
+          "Indonesia",
+          "Philippines",
+          "Sweden",
+          "Japan"
+        ],
+        "answer": 0,
+        "explanation": "Indonesia has over 17,000 islands.",
+        "difficulty": "medium"
+      }
+    ],
+    "hard": [
+      {
+        "question": "What is the deepest point in the ocean?",
+        "options": [
+          "Puerto Rico Trench",
+          "Mariana Trench",
+          "Tonga Trench",
+          "Japan Trench"
+        ],
+        "answer": 1,
+        "explanation": "The Mariana Trench is 11 km deep.",
+        "difficulty": "hard"
+      }
+    ]
+  },
+  "literature": {
+    "easy": [
+      {
+        "question": "Who wrote '1984'?",
+        "options": [
+          "Aldous Huxley",
+          "George Orwell",
+          "Ray Bradbury",
+          "H.G. Wells"
+        ],
+        "answer": 1,
+        "explanation": "George Orwell wrote the dystopian novel '1984'.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "What is the first book in the Harry Potter series?",
+        "options": [
+          "The Chamber of Secrets",
+          "The Philosopher's Stone",
+          "The Prisoner of Azkaban",
+          "The Goblet of Fire"
+        ],
+        "answer": 1,
+        "explanation": "'Harry Potter and the Philosopher's Stone' is the first book.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "Who wrote 'Romeo and Juliet'?",
+        "options": [
+          "Geoffrey Chaucer",
+          "William Shakespeare",
+          "Christopher Marlowe",
+          "Ben Jonson"
+        ],
+        "answer": 1,
+        "explanation": "Shakespeare wrote Romeo and Juliet.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "Who wrote 'Pride and Prejudice'?",
+        "options": [
+          "Charlotte Bronte",
+          "Emily Bronte",
+          "Jane Austen",
+          "Mary Shelley"
+        ],
+        "answer": 2,
+        "explanation": "Jane Austen wrote Pride and Prejudice.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "What is the longest novel ever written?",
+        "options": [
+          "War and Peace",
+          "In Search of Lost Time",
+          "Les Mis\u00e9rables",
+          "A la recherche du temps perdu"
+        ],
+        "answer": 1,
+        "explanation": "In Search of Lost Time by Proust is the longest novel.",
+        "difficulty": "easy"
+      }
+    ],
+    "medium": [
+      {
+        "question": "Who wrote 'The Great Gatsby'?",
+        "options": [
+          "Ernest Hemingway",
+          "F. Scott Fitzgerald",
+          "John Steinbeck",
+          "William Faulkner"
+        ],
+        "answer": 1,
+        "explanation": "F. Scott Fitzgerald wrote The Great Gatsby.",
+        "difficulty": "medium"
+      },
+      {
+        "question": "What is a haiku?",
+        "options": [
+          "Long epic poem",
+          "3-line poem with 5-7-5 syllables",
+          "Love sonnet",
+          "Free verse poem"
+        ],
+        "answer": 1,
+        "explanation": "A haiku is a 3-line poem with 5-7-5 syllable pattern.",
+        "difficulty": "medium"
+      }
+    ],
+    "hard": []
+  },
+  "math": {
+    "easy": [
+      {
+        "question": "What is 15% of 200?",
+        "options": [
+          "15",
+          "30",
+          "45",
+          "60"
+        ],
+        "answer": 1,
+        "explanation": "15% of 200 = 0.15 \u00d7 200 = 30",
+        "difficulty": "easy"
+      },
+      {
+        "question": "What is the square root of 144?",
+        "options": [
+          "10",
+          "11",
+          "12",
+          "14"
+        ],
+        "answer": 2,
+        "explanation": "12 \u00d7 12 = 144, so \u221a144 = 12",
+        "difficulty": "easy"
+      },
+      {
+        "question": "What is 25 + 37?",
+        "options": [
+          "60",
+          "61",
+          "62",
+          "63"
+        ],
+        "answer": 2,
+        "explanation": "25 + 37 = 62",
+        "difficulty": "easy"
+      },
+      {
+        "question": "What is 3 \u00d7 8?",
+        "options": [
+          "23",
+          "24",
+          "25",
+          "26"
+        ],
+        "answer": 1,
+        "explanation": "3 \u00d7 8 = 24",
+        "difficulty": "easy"
+      },
+      {
+        "question": "What is 100 \u00f7 4?",
+        "options": [
+          "23",
+          "24",
+          "25",
+          "26"
+        ],
+        "answer": 2,
+        "explanation": "100 \u00f7 4 = 25",
+        "difficulty": "easy"
+      }
+    ],
+    "medium": [
+      {
+        "question": "What is 15 \u00d7 6?",
+        "options": [
+          "85",
+          "90",
+          "95",
+          "100"
+        ],
+        "answer": 1,
+        "explanation": "15 \u00d7 6 = 90",
+        "difficulty": "medium"
+      },
+      {
+        "question": "What is the area of a rectangle with length 10 and width 5?",
+        "options": [
+          "45",
+          "50",
+          "55",
+          "60"
+        ],
+        "answer": 1,
+        "explanation": "Area = length \u00d7 width = 10 \u00d7 5 = 50",
+        "difficulty": "medium"
+      }
+    ],
+    "hard": []
+  },
+  "general": {
+    "easy": [
+      {
+        "question": "What is the hardest natural substance on Earth?",
+        "options": [
+          "Gold",
+          "Diamond",
+          "Platinum",
+          "Silver"
+        ],
+        "answer": 1,
+        "explanation": "Diamond is the hardest natural material.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "How many letters are in the English alphabet?",
+        "options": [
+          "24",
+          "25",
+          "26",
+          "27"
+        ],
+        "answer": 2,
+        "explanation": "The English alphabet has 26 letters.",
+        "difficulty": "easy"
+      },
+      {
+        "question": "What is the largest mammal in the world?",
+        "options": [
+          "African Elephant",
+          "Blue Whale",
+          "Polar Bear",
+          "Hippopotamus"
+        ],
+        "answer": 1,
+        "explanation": "The Blue Whale is the largest mammal.",
+        "difficulty": "easy"
+      }
+    ],
+    "medium": [],
+    "hard": []
+  },
+  "currentAffairs": {
+    "easy": [
+      {
+        "question": "What is the current year?",
+        "options": [
+          "2023",
+          "2024",
+          "2025",
+          "2026"
+        ],
+        "answer": 2,
+        "explanation": "Current year is 2025.",
+        "difficulty": "easy"
+      }
+    ],
+    "medium": [],
+    "hard": []
+  },
+  "polity": {
+    "easy": [
+      {
+        "question": "How many Fundamental Rights are there in the Indian Constitution?",
+        "options": [
+          "4",
+          "5",
+          "6",
+          "7"
+        ],
+        "answer": 2,
+        "explanation": "The Indian Constitution originally had 6 Fundamental Rights.",
+        "difficulty": "easy"
+      }
+    ],
+    "medium": [],
+    "hard": []
+  },
+  "economics": {
+    "easy": [
+      {
+        "question": "What is the monetary policy tool used by RBI?",
+        "options": [
+          "Repo Rate",
+          "Tax Rate",
+          "Interest Rate",
+          "Exchange Rate"
+        ],
+        "answer": 0,
+        "explanation": "Repo Rate is a key monetary policy tool.",
+        "difficulty": "easy"
+      }
+    ],
+    "medium": [],
+    "hard": []
+  }
 }
