--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.3.0",
+    "firebase-admin": "^12.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "openai": "^4.0.0",
