--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,12 @@
       { "source": "/api{,/**}", "function": "api" },
       { "source": "**", "function": "api" }
     ]
+  },
+  "firestore": {
+    "rules": "firestore.rules"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
 
